erDiagram
    USERS ||--o{ BOOKINGS : "places"
    USERS ||--o{ FOLLOWS : "follows"
    USERS ||--o{ REVIEWS_PTR : "writes"
    ARTISTS ||--o{ FOLLOWS : "is followed by"
    ARTISTS ||--o{ CONCERTS : "headlines"
    ARTISTS ||--o{ CONCERT_ARTISTS : "is in lineup of"
    CONCERTS ||--o{ CONCERT_ARTISTS : "has supporting"
    VENUES ||--o{ CONCERTS : "hosts"
    CONCERTS ||--o{ TICKETS : "offers"
    TICKETS ||--o{ BOOKINGS : "is purchased in"
    CONCERTS ||--o{ REVIEWS_PTR : "is reviewed in (Mongo)"
    CONCERTS ||--o{ SETLISTS_PTR : "has setlist (Mongo)"
    ARTISTS ||--o| ARTIST_BIOS_PTR : "has bio (Mongo)"

    USERS {
        int user_id PK
        varchar username UK
        varchar email UK
        varchar password_hash
        varchar home_city
        tinyint is_admin
        tinyint is_active
        datetime created_at
    }

    ARTISTS {
        int artist_id PK
        varchar name
        varchar genre
        varchar country
        varchar image_url
    }

    VENUES {
        int venue_id PK
        varchar name
        varchar city
        varchar country
        int capacity
        decimal lat
        decimal lng
    }

    CONCERTS {
        int concert_id PK
        int venue_id FK
        int headline_artist_id FK
        varchar title
        datetime concert_date
        enum status
        decimal base_price
        int view_count
    }

    CONCERT_ARTISTS {
        int concert_id PK_FK
        int artist_id PK_FK
        int slot_order
        varchar role
    }

    TICKETS {
        int ticket_id PK
        int concert_id FK
        varchar tier
        decimal price
        int total_seats
        int available_seats
    }

    BOOKINGS {
        int booking_id PK
        int user_id FK
        int ticket_id FK
        int quantity
        decimal total_price
        enum status
        datetime booked_at
    }

    FOLLOWS {
        int user_id PK_FK
        int artist_id PK_FK
        datetime followed_at
    }

    REVIEWS_PTR {
        string mongo_review_id "stored in MongoDB.reviews"
        int concert_id "logical FK"
        int user_id "logical FK"
        int rating "1-5"
        string title
        string body "full-text indexed"
        array tags
        array liked_by "user_ids (dedup likes)"
        array photos "{url,key} -> MinIO"
        datetime posted_at
    }

    SETLISTS_PTR {
        string mongo_setlist_id "stored in MongoDB.setlists"
        int concert_id "logical FK"
    }

    ARTIST_BIOS_PTR {
        string mongo_bio_id "stored in MongoDB.artist_bios"
        int artist_id "logical FK (unique)"
        string bio_text
        array tour_history
        array related_artists
    }

    %% legend: which entities live in which store
    "RELATIONAL (MySQL)" {
        table USERS
        table ARTISTS
        table VENUES
        table CONCERTS
        table CONCERT_ARTISTS
        table TICKETS
        table BOOKINGS
        table FOLLOWS
    }

    "NON-RELATIONAL (MongoDB)" {
        collection REVIEWS_PTR
        collection SETLISTS_PTR
        collection ARTIST_BIOS_PTR
    }
